Fix padding issues in CSS: set padding-top for body and buttons for consistent spacing

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
   border-radius: 10px;
   border: 2px solid #ffffff;
   box-shadow: 10px 12px 14px 2px rgba(0, 0, 0, 0.47); /* sombra a las imagenes*/
-  padding-top: auto; /*separa el texto por arriba(top)*/
+  padding-top: 2px; /*separa el texto por arriba(top)*/
 }
 
 .divtitulo {
@@ -114,7 +114,7 @@ img {
   height: 50px;
   background-color: #008a8f;
   color: #ffffff;
-  padding-top: auto;
+  padding-top: 10px;
 }
 
 .botones2 {
